= Change Log

For a list of breaking changes see link:#breaking[breaking-changes]

// Release workflow will:
// - Fail if there is no "== Unreleased" section header
// - Helpfully fail when the section contains no descriptive text
// - Replace the Unreleased section header with actual release version
// - Prepend a new Unreleased section header

== Unreleased

== v1.0.124-alpha

* Maintenance release - deps, docs and ops updates

https://github.com/lread/test-doc-blocks/compare/v1.0.116-alpha\...v1.0.124-alpha[Gritty details of changes for this release]

== v1.0.116-alpha

* Switch to `com.github.lread/test-doc-blocks` for deployment artifact name as per new security measures at clojars.

https://github.com/lread/test-doc-blocks/compare/v1.0.114-alpha\...v1.0.116-alpha[Gritty details of changes for this release]

== v1.0.114-alpha

* Ensure test-doc-blocks works on Windows

https://github.com/lread/test-doc-blocks/compare/v1.0.107-alpha\...v1.0.114-alpha[Gritty details of changes for this release]

== v1.0.107-alpha

* Support generating tests from CommonMark code blocks found in Clojure source docstrings

https://github.com/lread/test-doc-blocks/compare/v1.0.103-alpha\...v1.0.107-alpha[Gritty details of changes for this release]

== v1.0.103-alpha

* Correct sort order in new tree-like report of found blocks

https://github.com/lread/test-doc-blocks/compare/v1.0.101-alpha\...v1.0.103-alpha[Gritty details of changes for this release]

== v1.0.101-alpha

* Don't trim trailing newline for test body if last item is comment
* Switch from (too) wide table to tree-like report of found blocks

https://github.com/lread/test-doc-blocks/compare/v1.0.92-alpha\...v1.0.101-alpha[Gritty details of changes for this release]

== v1.0.92-alpha

* Upgraded from rewrite-clj v0 to rewrite-clj v1
* Release workflow now creates a GitHub release

https://github.com/lread/test-doc-blocks/compare/v1.0.85-alpha\...v1.0.92-alpha[Gritty details of changes for this release]

== v1.0.85-alpha
