@@ -28,9 +28,10 @@ jobs:
         restore-keys: $${ runner.os }}-cljdeps-
 
     - name: Setup Java
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v2
       with:
-        java-version: 11
+        distribution: 'adopt'
+        java-version: '11'
 
     #
     # Install Babashka
@@ -58,7 +59,7 @@ jobs:
        echo "$HOME\deps.clj" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       if: matrix.os == 'windows-latest'
     - name: Install Clojure (linux)
-      run: curl -s https://download.clojure.org/install/linux-install-1.10.2.796.sh | sudo bash
+      run: curl -s https://download.clojure.org/install/linux-install-1.10.3.814.sh | sudo bash
       if: matrix.os == 'ubuntu-latest'
 
     - name: Bring down ClojureTools early
