@@ -3,4 +3,4 @@
                            :sha "35ed39645038e81b42cb15ed6753b8462e60a06d"}
         docopt/docopt {:git/url "https://github.com/nubank/docopt.clj"
                        :sha "98814f559d2e50fdf10f43cbe3b7da0ca3cca423"}
-        version-clj/version-clj {:mvn/version "0.1.2"}}}
+        version-clj/version-clj {:mvn/version "2.0.1"}}}
