@@ -3,9 +3,9 @@
  :deps {org.clojure/clojure {:mvn/version "1.9.0"}
         org.clojure/tools.reader {:mvn/version "1.3.5"}
         babashka/fs {:mvn/version "0.0.3"}
-        clj-kondo/clj-kondo {:mvn/version "2021.03.22"}
-        metosin/malli {:mvn/version "0.3.1"}
-        rewrite-clj/rewrite-clj  {:mvn/version "1.0.594-alpha"}}
+        clj-kondo/clj-kondo {:mvn/version "2021.03.31"}
+        metosin/malli {:mvn/version "0.4.0"}
+        rewrite-clj/rewrite-clj  {:mvn/version "1.0.605-alpha"}}
 
  :aliases {;; clojure -X support for local examples
            :test-doc-blocks {:ns-default lread.test-doc-blocks
@@ -36,7 +36,7 @@
 
            ;; for kaocha see also tests.edn
            :isolated/kaocha {:replace-deps {org.clojure/clojure {:mvn/version "1.9.0"}
-                                            lambdaisland/kaocha {:mvn/version "1.0.829"}}
+                                            lambdaisland/kaocha {:mvn/version "1.0.732"}}
                              :replace-paths ["test"] ;; include test to bring in kaocha hook
                              :main-opts ["-m" "kaocha.runner"]}
 
@@ -65,7 +65,7 @@
            ;;
            ;; Deployment
            ;;
-           :jar {:replace-deps {com.github.seancorfield/depstar {:mvn/version "2.0.206"}}
+           :jar {:replace-deps {com.github.seancorfield/depstar {:mvn/version "2.0.216"}}
                  :exec-fn hf.depstar/jar
                  :exec-args {:jar "target/test-doc-blocks.jar"
                              :jar-type :thin}}
@@ -73,4 +73,9 @@
            :deploy {:replace-deps {slipset/deps-deploy {:mvn/version "0.1.5"}}
                     :exec-fn deps-deploy.deps-deploy/deploy
                     :exec-args {:installer :remote
-                                :artifact "target/test-doc-blocks.jar"}}}}
+                                :artifact "target/test-doc-blocks.jar"}}
+
+           ;; Maintenance
+           :outdated {:extra-deps {com.github.liquidz/antq {:mvn/version "0.13.0"}
+                                   org.slf4j/slf4j-simple {:mvn/version "1.7.30"}} ;; to rid ourselves of logger warnings
+                      :main-opts ["-m" "antq.core"]}}}
